<?xml version="1.0"?>
<package>
  <name>racecar</name>
  <version>0.0.0</version>
  <description>Racecar through a maze</description>

  <maintainer email="kevintodo@todo.todo">Kevin</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>geometry_msgs sensor_msgs</build_depend>
  <run_depend>geometry_msgs sensor_msgs</run_depend>
  <run_depend>roscpp</run_depend>

  <export>

  </export>
</package>
